<resources>
    <!-- ACTIVITIES strings-->
    <string name="app_name">Instagram</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="REGISTER">REGISTER</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="new_to_instagram">New to Instagram? Register</string>
    <string name="description">Description...</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>

    <!-- FRAGMENTS strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="profile_notification">Notification Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="post">POST</string>
    <string name="search">Search...</string>
    <string name="fullname">Full name</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="edit_profile">Edit profile</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="change_photo">Change photo</string>
    <string name="bio">Bio</string>

</resources>